Think I fixed the gradient component height on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -239,7 +239,7 @@ main {
 @media (max-width: 460px){
   .buttons{
     flex-direction: column;
-    margin-top: 2%;
+    margin-top: 0%;
   }
   .btn{
     width: 40%;
